--- a/Kinematica_Demo_YOLOX/.gitattributes
+++ b/Kinematica_Demo_YOLOX/.gitattributes
@@ -1,4 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
-*.bin filter=lfs diff=lfs merge=lfs -text
+*.bin filter=lfs diff=lfs merge=lfs
